# Chatbot-cicd

./: .dockerignore  .gitignore  Dockerfile  app.py  chat_function.py  pyproject.toml
deployments/: buildspec_production.yml  buildspec_staging.yml
